# theinterneti-tta-solo

./: .env.example  .gitignore  CLAUDE.md  PLAYTEST_REPORT.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: README.md  check_db.py  init-dolt.sh  init-dolt.sql  init-neo4j.cypher
specs/: abilities.md  archetypes.md  cli-ux.md  crunch-affinity.md  effects.md  engine.md  ic-ooc-presentation.md  mechanics.md  moves.md  multiverse.md  ontology.md  physics_overlays.md  quests.md  reputation.md  resources.md  solo_balance.md  use-ability.md
src/: __init__.py
src/cli/: repl.py
src/content/: starter_world.py
src/db/: __init__.py  dolt.py  interfaces.py  memory.py  neo4j_driver.py
src/engine/: __init__.py  ability_pbta.py  agents.py  game.py  intent.py  models.py  pbta.py  router.py
src/models/: __init__.py  ability.py  archetype.py  condition.py  crunch_affinity.py  entity.py  event.py  npc.py  (+4 more)
tests/: __init__.py  test_ability.py  test_ability_pbta.py  test_ability_router.py  test_archetype.py  test_condition.py  test_crunch_affinity.py  test_dice.py  test_e2e_gameplay.py  test_effects.py  test_engine.py  test_llm.py  test_llm_integration.py  test_models.py  test_move_executor.py  test_move_integration.py  test_multiverse.py  test_npc.py  test_npc_decision.py  test_pbta.py  test_physics_overlay.py  test_quest.py  test_reputation.py  test_resources.py  test_rest.py  test_setting_command.py  test_solo_combat.py  test_starter_world.py  test_use_ability_command.py
(+15 files in other folders)
